@@ -47,7 +47,7 @@
 
     <p><li>Provide a <b>task manager</b> which controls the optional appearance of pop-up dialogs.  Running tasks are organized in the task manager, freeing you to continue working in any folder or panel.  Custom commands can also be run as tasks in the task manager, allowing you to monitor their progress and errors.  Optional output dialogs monitor stdout/stderr output of built-in and custom commands, with error detection and popup control, or you can run your custom commands in a terminal or as an independent process.
 
-    <p><li>Provide a <b>plugin capability</b> which extends the base capabilities.  Plugins can be copied into most menus as custom commands, or can be installed as root for added protection and multi-user access.  Some plugins will eventually be included in SpaceFM's installation.  In addition. <b>any custom command you create can easily be saved as a plugin</b> and shared with other users.
+    <p><li>Provide a <b>plugin capability</b> which extends the base capabilities.  Plugins can be copied into most menus as custom commands, or can be installed as root for added protection and multi-user access.  In addition, <b>any custom command you create can easily be saved as a plugin</b> and shared with other users.
 
     <p><li>Provide <b>a common interface to multiple su and graphical su programs, terminals, and editors</b>.  You simply select which utilities you want to use for these functions, and SpaceFM's task manager handles the details of running your commands as other users, in a terminal, etc.
 
@@ -84,6 +84,7 @@
     <li>Task Manager - Control or eliminate popup dialogs with multi-tasking abilities - no waiting to move on to your next task
     <li>MIME - Manages MIME file types and default actions
     <li>Custom Menus and Toolbars - Its unique Design Mode allows you to quickly change any menu or toolbar item name, shortcut key, or icon, and insert your own commands or submenus anywhere
+    <li><a href="http://ignorantguru.github.com/spacefm/spacefm-manual-en.html#dialog">SpaceFM Dialog</a> - easily create, use, and control custom dialogs
     <li>Plugins - Install, copy, and export custom commands as plugins
     <li>Bash Integration - Built-in bash scripting support for custom commands, with file manager data exported as bash variables
     <li>Output Control - Monitor the stdout/stderr output of built-in and custom commands, with error detection and popup control, or run commands in a terminal
@@ -130,7 +131,7 @@ The <a href="https://github.com/IgnorantGuru/spacefm/wiki">SpaceFM Wiki</a> cont
 <tr>
 <td valign="top"><b>antiX<b></td>
 <td>
-	The upcoming <a href="http://sourceforge.net/projects/antix-linux/">antiX-12</a> base and full will include spacefm (currently available in <a href="http://news.softpedia.com/news/AntiX-M12-test-2-Has-Linux-Kernel-3-2-9-256940.shtml">testing</a>).
+	<a href="http://sourceforge.net/projects/antix-linux/">antiX-12</a> base and full includes spacefm
 </td>
 </tr>
 
@@ -472,6 +473,8 @@ Then open ~/.local/share/applications/spacefm.desktop in your editor and set the
 <ul>
     <a href="#context-help">How do I see help for a menu item?</a><br>
     <a href="#designmode">How do I set or change key shortcuts and icons?</a><br>
+    How to I set or change the key to go Up a directory?<br>
+	<blockquote>Right-click on the file list, right-click on menu item Go|Up, and select Key.</blockquote>
     <a href="#designmode-toolbars">How do I customize the toolbars?</a><br>
     <a href="#designmode-toolbars">I hid the toolbar - how do I restore it?</a><br>
     How do I create a custom menu command?<br>
