@@ -4,6 +4,7 @@
     fix path bar font not set on new browser
     default keys for Go|Tab|Tab N = Alt+1 thru Alt+0
     license bumped to GPL3+
+    added SpaceFM Dialog
     Task Show Output raises only once
     custom default command script
 0.7.11  2012-08-15:
